--- a/rules/REQUEST-934-APPLICATION-ATTACK-GENERIC.json
+++ b/rules/REQUEST-934-APPLICATION-ATTACK-GENERIC.json
@@ -11,7 +11,7 @@
     "category": "GENERIC",
     "phase": 1,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\"], \"raw_tags\": [\"OWASP_CRS\"], \"operator\": \"less_than\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "GENERIC Detected"
@@ -28,7 +28,7 @@
     "category": "GENERIC",
     "phase": 2,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\"], \"raw_tags\": [\"OWASP_CRS\"], \"operator\": \"less_than\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "GENERIC Detected"
@@ -45,7 +45,7 @@
     "category": "GENERIC",
     "phase": 2,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\", \"urlDecodeUni\", \"jsDecode\", \"removeWhitespace\", \"base64Decode\", \"urlDecodeUni\", \"jsDecode\", \"removeWhitespace\"], \"raw_tags\": [\"application-multi\", \"language-javascript\", \"platform-multi\", \"attack-rce\", \"attack-injection-generic\", \"paranoia-level/1\", \"OWASP_CRS\", \"OWASP_CRS/ATTACK-GENERIC\", \"capec/1000/152/242\"], \"operator\": \"regex\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}"
@@ -62,7 +62,7 @@
     "category": "GENERIC",
     "phase": 2,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\"], \"raw_tags\": [\"application-multi\", \"language-multi\", \"platform-multi\", \"attack-ssrf\", \"paranoia-level/1\", \"OWASP_CRS\", \"OWASP_CRS/ATTACK-GENERIC\", \"capec/1000/225/664\"], \"operator\": \"phrase_match_file\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}"
@@ -79,7 +79,7 @@
     "category": "GENERIC",
     "phase": 2,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\", \"urlDecodeUni\", \"jsDecode\"], \"raw_tags\": [\"application-multi\", \"language-javascript\", \"platform-multi\", \"attack-rce\", \"attack-injection-generic\", \"paranoia-level/1\", \"OWASP_CRS\", \"OWASP_CRS/ATTACK-GENERIC\", \"capec/1/180/77\"], \"operator\": \"regex\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}"
@@ -96,7 +96,7 @@
     "category": "GENERIC",
     "phase": 2,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\"], \"raw_tags\": [\"application-multi\", \"language-ruby\", \"platform-multi\", \"attack-rce\", \"attack-injection-generic\", \"paranoia-level/1\", \"OWASP_CRS\", \"OWASP_CRS/ATTACK-GENERIC\", \"capec/1000/152/242\"], \"operator\": \"regex\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}"
@@ -113,7 +113,7 @@
     "category": "GENERIC",
     "phase": 2,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\", \"urlDecodeUni\", \"jsDecode\", \"base64Decode\", \"urlDecodeUni\", \"jsDecode\", \"replaceComments\"], \"raw_tags\": [\"application-multi\", \"language-javascript\", \"platform-multi\", \"attack-rce\", \"attack-injection-generic\", \"paranoia-level/1\", \"OWASP_CRS\", \"OWASP_CRS/ATTACK-GENERIC\", \"capec/1000/152/242\"], \"operator\": \"regex\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}"
@@ -130,7 +130,7 @@
     "category": "GENERIC",
     "phase": 2,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\", \"urlDecodeUni\"], \"raw_tags\": [\"application-multi\", \"language-php\", \"platform-multi\", \"attack-ssrf\", \"paranoia-level/1\", \"OWASP_CRS\", \"OWASP_CRS/ATTACK-GENERIC\", \"capec/1000/152/242\"], \"operator\": \"regex\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}"
@@ -147,7 +147,7 @@
     "category": "GENERIC",
     "phase": 1,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\"], \"raw_tags\": [\"OWASP_CRS\"], \"operator\": \"less_than\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "GENERIC Detected"
@@ -164,7 +164,7 @@
     "category": "GENERIC",
     "phase": 2,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\"], \"raw_tags\": [\"OWASP_CRS\"], \"operator\": \"less_than\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "GENERIC Detected"
@@ -181,7 +181,7 @@
     "category": "GENERIC",
     "phase": 2,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\", \"urlDecodeUni\", \"jsDecode\", \"base64Decode\", \"urlDecodeUni\", \"jsDecode\"], \"raw_tags\": [\"application-multi\", \"language-javascript\", \"platform-multi\", \"attack-rce\", \"attack-injection-generic\", \"paranoia-level/2\", \"OWASP_CRS\", \"OWASP_CRS/ATTACK-GENERIC\", \"capec/1000/152/242\"], \"operator\": \"regex\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}"
@@ -198,7 +198,7 @@
     "category": "GENERIC",
     "phase": 2,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\"], \"raw_tags\": [\"application-multi\", \"language-multi\", \"platform-multi\", \"attack-ssrf\", \"paranoia-level/2\", \"OWASP_CRS\", \"OWASP_CRS/ATTACK-GENERIC\", \"capec/1000/225/664\"], \"operator\": \"regex\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}"
@@ -215,7 +215,24 @@
     "category": "GENERIC",
     "phase": 2,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\"], \"raw_tags\": [\"application-multi\", \"language-perl\", \"platform-multi\", \"attack-rce\", \"attack-injection-generic\", \"paranoia-level/2\", \"OWASP_CRS\", \"OWASP_CRS/ATTACK-GENERIC\", \"capec/1000/152/242\"], \"operator\": \"regex\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
+    "chain_level": 0,
+    "parent_rule_id": null,
+    "logdata": "Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}"
+  },
+  {
+    "rule_id": "934180",
+    "rule_pattern": "(?:{%[^%}]*%}|<%=?[^%>]*%>)",
+    "action": "block",
+    "enabled": true,
+    "score": 5,
+    "paranoia_level": 2,
+    "anomaly_score": 20,
+    "severity": "CRITICAL",
+    "category": "GENERIC",
+    "phase": 2,
+    "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\"], \"raw_tags\": [\"application-multi\", \"platform-multi\", \"attack-ssti\", \"attack-injection-generic\", \"paranoia-level/2\", \"OWASP_CRS\", \"OWASP_CRS/ATTACK-GENERIC\", \"capec/1000/152/242\"], \"operator\": \"regex\"}",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}"
@@ -232,7 +249,7 @@
     "category": "GENERIC",
     "phase": 1,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\"], \"raw_tags\": [\"OWASP_CRS\"], \"operator\": \"less_than\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "GENERIC Detected"
@@ -249,7 +266,7 @@
     "category": "GENERIC",
     "phase": 2,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\"], \"raw_tags\": [\"OWASP_CRS\"], \"operator\": \"less_than\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "GENERIC Detected"
@@ -266,7 +283,7 @@
     "category": "GENERIC",
     "phase": 1,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\"], \"raw_tags\": [\"OWASP_CRS\"], \"operator\": \"less_than\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "GENERIC Detected"
@@ -283,7 +300,7 @@
     "category": "GENERIC",
     "phase": 2,
     "tags": "{\"targets\": [\"REQUEST_COOKIES\", \"REQUEST_COOKIES_NAMES\", \"ARGS\", \"ARGS_NAMES\", \"REQUEST_URI\", \"REQUEST_HEADERS\", \"REQUEST_BODY\"], \"transformations\": [\"none\"], \"raw_tags\": [\"OWASP_CRS\"], \"operator\": \"less_than\"}",
-    "version": "4.15.0",
+    "version": "4.16.0",
     "chain_level": 0,
     "parent_rule_id": null,
     "logdata": "GENERIC Detected"
