--- a/.github/workflows/clean-csv.yml
+++ b/.github/workflows/clean-csv.yml
@@ -1,4 +1,4 @@
-name: Clean CSV Files
+name: Clean Conf Files
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  clean-csv:
+  clean-conf:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,17 +22,19 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pandas
+        pip install requests
 
     - name: Run cleaning script
-      run: python scripts/remove_comments.py
+      run: python scripts/remove_comments_conf.py
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Commit cleaned files
+    - name: Commit stripped files
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add cleaned_files/*
-        git commit -m "Add cleaned CSV files" || echo "No changes to commit"
+        git add stripped_files/*
+        git commit -m "Add stripped .conf files" || echo "No changes to commit"
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
