--- a/.github/workflows/clean-conf.yml
+++ b/.github/workflows/clean-conf.yml
@@ -17,17 +17,27 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.x'
+        python-version: '3.10'
 
     - name: Run cleaning script
-      run: python scripts/remove_comments_conf.py
+      run: |
+        if [ ! -d "rules" ]; then
+          echo "Error: rules directory not found"
+          exit 1
+        fi
+        if [ -z "$(ls rules/*.conf 2>/dev/null)" ]; then
+          echo "No .conf files found in rules directory"
+          exit 0
+        fi
+        python scripts/remove_comments_conf.py
+
+    - name: List output files
+      run: ls -l stripped_files/ || echo "No output files generated"
 
     - name: Commit stripped files
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add stripped_files/*
-        git commit -m "Add stripped .conf files" || echo "No changes to commit"
-        git push
+      uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+        commit_message: "Add stripped .conf files"
+        file_pattern: "stripped_files/*.conf"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
